Fix long room names overflowing the menu

--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -370,6 +370,7 @@ ul.nostyle
     width: 100%
     font-weight: bold
     align-items: center
+    word-break: break-word
 
     &.selected, &:hover
       background-color: hsla(0, 0%, 0%, 0.30)
